# open-desk-mvp

./: .gitignore  README.md  api-calls.md  index.html  initial-schema.sql  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.js  vitest.config.js
langserve_api/: .gitignore  main.py  orchestrator.py  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_test.sh  run_tests.sh  supabase_client.py  ticket_classification_implementation.md
langserve_api/agents/: __init__.py  auto_resolution_agent.py  classifier_agent.py  ingestion_agent.py  models.py  resolution_agent.py  retrieval_agent.py
langserve_api/agents/tools/: category_tool.py  metadata_tool.py  priority_tool.py  tag_tool.py
langserve_api/flows/: auto_resolution_flow.py
langserve_api/routers/: ticket_router.py
langserve_api/scripts/: add_test_tickets.py  test_classification.py  test_ticket_agent.py
langserve_api/services/: ticket_agent.py  ticket_tools.py  vector_store.py
langserve_api/tests/: __init__.py  conftest.py  test_classification.py  test_classifier_agent.py  test_helpers.py  test_ingestion_agent.py  test_retrieval_agent.py
public/favicon_io/: site.webmanifest
src/: App.jsx  index.css
src/contexts/: AuthContext.jsx  RoleContext.jsx
src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  MyTickets.jsx
src/services/: supabase.js
supabase/: README.md  config.toml
supabase-old/functions/: 01_triggers.sql  02_ticket_functions.sql
supabase-old/migrations/: 00_cleanup.sql  (+8 more)
ticket_agent/: project_structure.txt  requirements.txt  setup.py
(+84 files in other folders)
